# invoice-parser

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  comments.md  pyproject.toml  requirements.md  spec.md  tasks.md
.claude/commands/: develop.md  review.md
.claude/profiles/: developer.md  reviewer.md
.claude/skills/develop/: SKILL.md
.claude/skills/review/: SKILL.md
app/: main.py
app/api/v1/: router.py  schemas.py
app/core/: config.py  logging.py  security.py
app/services/: llm_extractor.py  pdf_extractor.py  pipeline.py  validator.py
tests/: conftest.py  test_api.py  test_auth.py  test_error_handling.py  test_extract_endpoint.py  test_health.py  test_llm_extractor.py  test_logging.py  test_middleware.py  test_model_loading.py  test_pdf_extractor.py  test_pdf_validation.py  test_pipeline.py  test_schemas.py  test_validator.py  utils.py
tests/fixtures/: generate_fixtures.py  invoice_english.json  invoice_german.json  invoice_partial.json  invoice_scanned.json
