[project]
name = "invoice-parser"
version = "0.1.0"
description = "Stateless HTTP service that extracts structured fields from PDF invoices using a local LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "pdfplumber>=0.11",
    "pdf2image>=1.17",
    "Pillow>=11.0",
    "paddleocr>=2.9",
    "huggingface-hub>=0.26",
    "llama-cpp-python>=0.3",
    "python-dateutil>=2.9",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "types-python-dateutil>=2.9",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app/services --cov-report=term-missing"
